Working ore blocks

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw.json5
@@ -28,7 +28,14 @@
       sources: {
         base: {
           source: {
-            type: "modularmetals:resolved"
+            type: "modularmetals:property_or_default",
+            backup: {
+              type: "modularmetals:resolved"
+            },
+            property: "modularmetals:ore_generator",
+            source: {
+              type: "modularmetals:property_capture"
+            }
           },
           scale: 1
         },
