--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,4 +62,4 @@ quilt_loom = { id = "org.quiltmc.loom", version = "1.1.+" }
 forgegradle = {id = "net.minecraftforge.gradle", version = "5.1.+"}
 librarian = {id = "org.parchmentmc.librarian.forgegradle", version = "1.+"}
 mixin = {id = "org.spongepowered.mixin", version = "0.7.+"}
-logfilter = {id = "dev.lukebemish.logfilter", version = "0.1.+"}
+mdg = {id = "io.github.groovymc.modsdotgroovy", version = "1.1.+"}
