Add smelting recipes

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -27,6 +27,9 @@
     "modularmetals:helmet_from_ingots",
     "modularmetals:chestplate_from_ingots",
     "modularmetals:leggings_from_ingots",
-    "modularmetals:boots_from_ingots"
+    "modularmetals:boots_from_ingots",
+    // smelting/blasting
+    "modularmetals:nugget_from_smelting",
+    "modularmetals:nugget_from_blasting",
   ]
 }
