--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/ore_metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/ore_metal.json5
@@ -5,5 +5,11 @@
   variants: [
     "modularmetals:raw",
     "modularmetals:raw_block"
+  ],
+  recipes: [
+    'modularmetals:ingot_from_ore_blasting',
+    'modularmetals:ingot_from_ore_smelting',
+    'modularmetals:ingot_from_raw_blasting',
+    'modularmetals:ingot_from_raw_smelting',
   ]
 }
