--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
@@ -44,7 +44,8 @@
   name: "Hoe",
   tags: [
     "fabric:hoes",
-    "minecraft:hoes"
+    "minecraft:hoes",
+    "modularmetals:recyclable/%s"
   ],
   attack_modifier: 0,
   speed_modifier: -3.0,
