--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=false
 
 group=dev.lukebemish.modularmetals
-version=1.0-SNAPSHOT
+version=0.1.0
 
 mod_id=modularmetals
 mod_name=Modular Metals
