Add horse armor

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -11,7 +11,8 @@
     "modularmetals:helmet",
     "modularmetals:chestplate",
     "modularmetals:leggings",
-    "modularmetals:boots"
+    "modularmetals:boots",
+    "modularmetals:horse_armor"
   ],
   recipes: [
     // crafting
