--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
@@ -12,7 +12,7 @@
       }
     }
   },
-  name: "Block",
+  name: "Block of %s",
   tags: [
     "forge:storage_blocks/%s",
     "forge:storage_blocks",
