--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/ingot.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/ingot.json5
@@ -8,7 +8,8 @@
         source: {
           type: "dynamic_asset_generator:texture",
           path: "minecraft:item/gold_ingot"
-        }
+        },
+        range: [0.05, 1]
       }
     }
   },
