--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw.json5
@@ -9,7 +9,7 @@
           type: "dynamic_asset_generator:palette_spread",
           source: {
             type: "dynamic_asset_generator:texture",
-            path: "minecraft:item/raw_iron"
+            path: "minecraft:item/raw_gold"
           }
         },
         property: "modularmetals:oxide_generator",
