--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/template_sets/copper.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/template_sets/copper.json5
@@ -8,21 +8,12 @@
       }
     }
   },
-  "modularmetals:nugget": {
-    "": {
-      type: "dynamic_asset_generator:palette_spread",
-      source: {
-        type: "dynamic_asset_generator:texture",
-        path: "minecraft:item/iron_nugget"
-      }
-    }
-  },
   "modularmetals:block": {
     "": {
       type: "dynamic_asset_generator:palette_spread",
       source: {
         type: "dynamic_asset_generator:texture",
-        path: "minecraft:item/copper_block"
+        path: "minecraft:block/copper_block"
       }
     }
   }
