--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
@@ -2,7 +2,19 @@
   type: "modularmetals:pickaxe",
   inherit: "modularmetals:metal_item",
   texturing: {
-    template: "modularmetals:item/pickaxe_base",
+    template: {
+      "": {
+        type: "dynamic_asset_generator:palette_spread",
+        source: {
+          type: "dynamic_asset_generator:texture",
+          path: "modularmetals:item/pickaxe_base"
+        },
+        range: [
+          [0.0, 0.2],
+          [0.4, 1.0]
+        ]
+      }
+    },
     generator: {
       type: "dynamic_asset_generator:animation_splitter",
       sources: {
