Loot table shenanigans to make horse armor loot work

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -32,5 +32,7 @@
     // smelting/blasting
     "modularmetals:nugget_from_smelting",
     "modularmetals:nugget_from_blasting",
+    // loot
+    "modularmetals:horse_armor_loot"
   ]
 }
