--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -92,8 +92,8 @@ dependencies {
 mixin {
     add sourceSets.main, 'modularmetals.refmap.json'
     config 'mixin.modularmetals.forge.json'
-    //add project(":Common").sourceSets.main, 'excavated_variants.refmap.json'
-    //config 'mixin.modularmetals.json'
+    add project(":Common").sourceSets.main, 'modularmetals.refmap.json'
+    config 'mixin.modularmetals.json'
 }
 
 tasks.withType(GroovyCompile) {
